src/main/java/com/example/Demo/errors/exception/users/ChangePassException.java
package com.example.Demo.errors.exception.users;

public class ChangePassException extends RuntimeException {
    public ChangePassException(String message) {
        super(message);
    }
}
